内容：增加HeadSpinner功能 进度：正在进行 作者：舒文

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.head.views.ui.notifications.NotificationsFragment"
+        android:name="com.head.views.ui.spinner.SpinnerFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_spinner" />
 </navigation>
