--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -127,6 +127,10 @@
         </attr>
 
 
-    </declare-styleable>
 
+
+    </declare-styleable>
+    <declare-styleable name="HeadSpinner" >
+
+    </declare-styleable>
 </resources>
