内容：增加HeadSpinner 已经全部开发完成 进度：正在进行 作者：舒文

--- a/app/src/main/res/layout/fragment_edit_text.xml
+++ b/app/src/main/res/layout/fragment_edit_text.xml
@@ -27,21 +27,21 @@
             android:paddingHorizontal="6dp"
             android:text="HeadEditTextView"
             android:textColor="@color/textColor"
-            app:headBackgroundColor="#03A9F4"
-            app:headClear="@{viewModel.check2}"
-            app:headClearIcon="@{viewModel.check3}"
-            app:headGradientFrom="#9F4E4D51"
-            app:headGradientTo="#D8393939"
-            app:headRadianLeftBottom="@{viewModel.progress3}"
-            app:headRadianLeftTop="@{viewModel.progress3}"
-            app:headRadianRightBottom="@{viewModel.progress4}"
-            app:headRadianRightTop="@{viewModel.progress4}"
-            app:headRadians="@{viewModel.progress1}"
-            app:headStrokeColor="#F44336"
-            app:headStrokeDashGap="@{viewModel.progress2-10}"
-            app:headStrokeDashWidth="@{viewModel.progress2-10}"
-            app:headStrokeWidth="@{viewModel.progress2}"
-            app:headSupportGradient="@{viewModel.check1}"
+            app:headEditTextBackgroundColor="#03A9F4"
+            app:headEditTextClear="@{viewModel.check2}"
+            app:headEditTextClearIcon="@{viewModel.check3}"
+            app:headEditTextGradientFrom="#9F4E4D51"
+            app:headEditTextGradientTo="#D8393939"
+            app:headEditTextRadianLeftBottom="@{viewModel.progress3}"
+            app:headEditTextRadianLeftTop="@{viewModel.progress3}"
+            app:headEditTextRadianRightBottom="@{viewModel.progress4}"
+            app:headEditTextRadianRightTop="@{viewModel.progress4}"
+            app:headEditTextRadians="@{viewModel.progress1}"
+            app:headEditTextStrokeColor="#F44336"
+            app:headEditTextStrokeDashGap="@{viewModel.progress2-10}"
+            app:headEditTextStrokeDashWidth="@{viewModel.progress2-10}"
+            app:headEditTextStrokeWidth="@{viewModel.progress2}"
+            app:headEditTextSupportGradient="@{viewModel.check1}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
