--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -1,125 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="HeadEditTextView" >
+    <declare-styleable name="HeadEditTextView">
         <!--背景色-->
-        <attr name="headBackgroundColor" format="color"></attr>
+        <attr name="headEditTextBackgroundColor" format="color" />
         <!--是否支持渐变-->
-        <attr name="headSupportGradient" format="boolean"></attr>
+        <attr name="headEditTextSupportGradient" format="boolean" />
         <!--渐变起始色-->
-        <attr name="headGradientFrom" format="color"></attr>
+        <attr name="headEditTextGradientFrom" format="color" />
         <!--渐变结束色-->
-        <attr name="headGradientTo" format="color"></attr>
+        <attr name="headEditTextGradientTo" format="color" />
         <!--圆角弧度-->
-        <attr name="headRadians" format="dimension"></attr>
+        <attr name="headEditTextRadians" format="dimension" />
         <!--单独设置每个角-->
-        <attr name="headRadianLeftTop" format="dimension"></attr>
+        <attr name="headEditTextRadianLeftTop" format="dimension" />
         <!--单独设置每个角-->
-        <attr name="headRadianRightTop" format="dimension"></attr>
+        <attr name="headEditTextRadianRightTop" format="dimension" />
         <!--单独设置每个角-->
-        <attr name="headRadianLeftBottom" format="dimension"></attr>
+        <attr name="headEditTextRadianLeftBottom" format="dimension" />
         <!--单独设置每个角-->
-        <attr name="headRadianRightBottom" format="dimension"></attr>
+        <attr name="headEditTextRadianRightBottom" format="dimension" />
         <!--边框颜色-->
-        <attr name="headStrokeColor" format="color"></attr>
+        <attr name="headEditTextStrokeColor" format="color" />
         <!--设置边框宽度-->
-        <attr name="headStrokeWidth" format="dimension"></attr>
+        <attr name="headEditTextStrokeWidth" format="dimension" />
         <!--设置边框为虚线的长度-->
-        <attr name="headStrokeDashWidth" format="float"></attr>
+        <attr name="headEditTextStrokeDashWidth" format="float" />
         <!--设置虚线之间的像素间距-->
-        <attr name="headStrokeDashGap" format="float"></attr>
+        <attr name="headEditTextStrokeDashGap" format="float" />
         <!--设置开启右侧的清空内容事件 默认关闭-->
-        <attr name="headClear" format="boolean"></attr>
+        <attr name="headEditTextClear" format="boolean" />
         <!--设置开启右侧的清空内容按钮是否根据焦点来控制显示还是不显示，默认关闭这个开关-->
-        <attr name="headClearIcon" format="boolean"></attr>
+        <attr name="headEditTextClearIcon" format="boolean" />
         <!--控件类型-->
-        <attr name="headType">
-            <enum name="editText" value="-1" />
-            <enum name="textView" value="-2" />
+        <attr name="headEditTextType">
+            <enum name="editText" value="0" />
+            <enum name="textView" value="1" />
         </attr>
     </declare-styleable>
-    <declare-styleable name="HeadButton" >
+    <declare-styleable name="HeadButton">
         <!--背景色 默认-->
-        <attr name="headNormalBackgroundColor" format="color"></attr>
+        <attr name="headButtonNormalBackgroundColor" format="color" />
         <!--是否支持渐变 默认-->
-        <attr name="headNormalSupportGradient" format="boolean"></attr>
+        <attr name="headButtonNormalSupportGradient" format="boolean" />
         <!--渐变起始色 默认-->
-        <attr name="headNormalGradientFrom" format="color"></attr>
+        <attr name="headButtonNormalGradientFrom" format="color" />
         <!--渐变结束色 默认-->
-        <attr name="headNormalGradientTo" format="color"></attr>
+        <attr name="headButtonNormalGradientTo" format="color" />
         <!--圆角弧度 默认-->
-        <attr name="headNormalRadians" format="dimension"></attr>
+        <attr name="headButtonNormalRadians" format="dimension" />
         <!--单独设置每个角 默认-->
-        <attr name="headNormalRadianLeftTop" format="dimension"></attr>
+        <attr name="headButtonNormalRadianLeftTop" format="dimension" />
         <!--单独设置每个角 默认-->
-        <attr name="headNormalRadianRightTop" format="dimension"></attr>
+        <attr name="headButtonNormalRadianRightTop" format="dimension" />
         <!--单独设置每个角 默认-->
-        <attr name="headNormalRadianLeftBottom" format="dimension"></attr>
+        <attr name="headButtonNormalRadianLeftBottom" format="dimension" />
         <!--单独设置每个角 默认-->
-        <attr name="headNormalRadianRightBottom" format="dimension"></attr>
+        <attr name="headButtonNormalRadianRightBottom" format="dimension" />
         <!--边框颜色 默认-->
-        <attr name="headNormalStrokeColor" format="color"></attr>
+        <attr name="headButtonNormalStrokeColor" format="color" />
         <!--设置边框宽度 默认-->
-        <attr name="headNormalStrokeWidth" format="dimension"></attr>
+        <attr name="headButtonNormalStrokeWidth" format="dimension" />
         <!--设置边框为虚线的长度 默认-->
-        <attr name="headNormalStrokeDashWidth" format="float"></attr>
+        <attr name="headButtonNormalStrokeDashWidth" format="float" />
         <!--设置虚线之间的像素间距 默认-->
-        <attr name="headNormalStrokeDashGap" format="float"></attr>
+        <attr name="headButtonNormalStrokeDashGap" format="float" />
 
 
         <!--背景色 按下-->
-        <attr name="headPressedBackgroundColor" format="color"></attr>
+        <attr name="headButtonPressedBackgroundColor" format="color" />
         <!--是否支持渐变 按下-->
-        <attr name="headPressedSupportGradient" format="boolean"></attr>
+        <attr name="headButtonPressedSupportGradient" format="boolean" />
         <!--渐变起始色 按下-->
-        <attr name="headPressedGradientFrom" format="color"></attr>
+        <attr name="headButtonPressedGradientFrom" format="color" />
         <!--渐变结束色 按下-->
-        <attr name="headPressedGradientTo" format="color"></attr>
+        <attr name="headButtonPressedGradientTo" format="color" />
         <!--圆角弧度 按下-->
-        <attr name="headPressedRadians" format="dimension"></attr>
+        <attr name="headButtonPressedRadians" format="dimension" />
         <!--单独设置每个角 按下-->
-        <attr name="headPressedRadianLeftTop" format="dimension"></attr>
+        <attr name="headButtonPressedRadianLeftTop" format="dimension" />
         <!--单独设置每个角 按下-->
-        <attr name="headPressedRadianRightTop" format="dimension"></attr>
+        <attr name="headButtonPressedRadianRightTop" format="dimension" />
         <!--单独设置每个角 按下-->
-        <attr name="headPressedRadianLeftBottom" format="dimension"></attr>
+        <attr name="headButtonPressedRadianLeftBottom" format="dimension" />
         <!--单独设置每个角 按下-->
-        <attr name="headPressedRadianRightBottom" format="dimension"></attr>
+        <attr name="headButtonPressedRadianRightBottom" format="dimension" />
         <!--边框颜色 按下-->
-        <attr name="headPressedStrokeColor" format="color"></attr>
+        <attr name="headButtonPressedStrokeColor" format="color" />
         <!--设置边框宽度 按下-->
-        <attr name="headPressedStrokeWidth" format="dimension"></attr>
+        <attr name="headButtonPressedStrokeWidth" format="dimension" />
         <!--设置边框为虚线的长度 按下-->
-        <attr name="headPressedStrokeDashWidth" format="float"></attr>
+        <attr name="headButtonPressedStrokeDashWidth" format="float" />
         <!--设置虚线之间的像素间距 按下-->
-        <attr name="headPressedStrokeDashGap" format="float"></attr>
+        <attr name="headButtonPressedStrokeDashGap" format="float" />
 
 
         <!--背景色 禁止-->
-        <attr name="headEnabledBackgroundColor" format="color"></attr>
+        <attr name="headButtonEnabledBackgroundColor" format="color" />
         <!--是否支持渐变 禁止-->
-        <attr name="headEnabledSupportGradient" format="boolean"></attr>
+        <attr name="headButtonEnabledSupportGradient" format="boolean" />
         <!--渐变起始色 禁止-->
-        <attr name="headEnabledGradientFrom" format="color"></attr>
+        <attr name="headButtonEnabledGradientFrom" format="color" />
         <!--渐变结束色 禁止-->
-        <attr name="headEnabledGradientTo" format="color"></attr>
+        <attr name="headButtonEnabledGradientTo" format="color" />
         <!--圆角弧度 禁止-->
-        <attr name="headEnabledRadians" format="dimension"></attr>
+        <attr name="headButtonEnabledRadians" format="dimension" />
         <!--单独设置每个角 禁止-->
-        <attr name="headEnabledRadianLeftTop" format="dimension"></attr>
+        <attr name="headButtonEnabledRadianLeftTop" format="dimension" />
         <!--单独设置每个角 禁止-->
-        <attr name="headEnabledRadianRightTop" format="dimension"></attr>
+        <attr name="headButtonEnabledRadianRightTop" format="dimension" />
         <!--单独设置每个角 禁止-->
-        <attr name="headEnabledRadianLeftBottom" format="dimension"></attr>
+        <attr name="headButtonEnabledRadianLeftBottom" format="dimension" />
         <!--单独设置每个角 禁止-->
-        <attr name="headEnabledRadianRightBottom" format="dimension"></attr>
+        <attr name="headButtonEnabledRadianRightBottom" format="dimension" />
         <!--边框颜色 禁止-->
-        <attr name="headEnabledStrokeColor" format="color"></attr>
+        <attr name="headButtonEnabledStrokeColor" format="color" />
         <!--设置边框宽度 禁止-->
-        <attr name="headEnabledStrokeWidth" format="dimension"></attr>
+        <attr name="headButtonEnabledStrokeWidth" format="dimension" />
         <!--设置边框为虚线的长度 禁止-->
-        <attr name="headEnabledStrokeDashWidth" format="float"></attr>
+        <attr name="headButtonEnabledStrokeDashWidth" format="float" />
         <!--设置虚线之间的像素间距 禁止-->
-        <attr name="headEnabledStrokeDashGap" format="float"></attr>
+        <attr name="headButtonEnabledStrokeDashGap" format="float" />
         <!--设置按钮是矩形还是椭圆形 默认矩形-->
         <attr name="headButtonShape">
             <enum name="rectangle" value="0" />
@@ -127,10 +127,69 @@
         </attr>
 
 
+    </declare-styleable>
 
+
+    <declare-styleable name="HeadSpinner">
+        <attr name="headSpinnerWidth" format="dimension">
+            <enum name="match_parent" value="-1" />
+            <enum name="wrap_content" value="-2" />
+        </attr>
+        <attr name="headSpinnerHeight" format="dimension">
+            <enum name="match_parent" value="-1" />
+            <enum name="wrap_content" value="-2" />
+        </attr>
+        <attr name="headSpinnerDropDownGravity">
+            <!--左对齐-->
+            <enum name="LEFT" value="0" />
+            <!--右对齐-->
+            <enum name="RIGHT" value="1" />
+            <!--居中对齐-->
+            <enum name="CENTER" value="2" />
+        </attr>
+        <!--相对锚点偏移值，正值暗示向右偏移-->
+        <attr name="headSpinnerHorizontalOffset" format="dimension" />
+        <!--相对锚点偏移值，正值暗示向下偏移-->
+        <attr name="headSpinnerVerticalOffset" format="dimension" />
+
+        <!--背景色-->
+        <attr name="headSpinnerBackgroundColor" format="color" />
+        <!--是否支持渐变-->
+        <attr name="headSpinnerSupportGradient" format="boolean" />
+        <!--渐变起始色-->
+        <attr name="headSpinnerGradientFrom" format="color" />
+        <!--渐变结束色-->
+        <attr name="headSpinnerGradientTo" format="color" />
+        <!--圆角弧度-->
+        <attr name="headSpinnerRadians" format="dimension" />
+        <!--单独设置每个角-->
+        <attr name="headSpinnerRadianLeftTop" format="dimension" />
+        <!--单独设置每个角-->
+        <attr name="headSpinnerRadianRightTop" format="dimension" />
+        <!--单独设置每个角-->
+        <attr name="headSpinnerRadianLeftBottom" format="dimension" />
+        <!--单独设置每个角-->
+        <attr name="headSpinnerRadianRightBottom" format="dimension" />
+        <!--边框颜色-->
+        <attr name="headSpinnerStrokeColor" format="color" />
+        <!--设置边框宽度-->
+        <attr name="headSpinnerStrokeWidth" format="dimension" />
+        <!--设置边框为虚线的长度-->
+        <attr name="headSpinnerStrokeDashWidth" format="float" />
+        <!--设置虚线之间的像素间距-->
+        <attr name="headSpinnerStrokeDashGap" format="float" />
+        <!--设置Spinner的文本颜色-->
+        <attr name="headSpinnerTextColor" format="color" />
+        <!--设置Spinner的文本Size-->
+        <attr name="headSpinnerTextSize" format="dimension" />
+        <!--arrow是否显示-->
+        <attr name="headSpinnerArrowVisibility">
+            <enum name="visible" value="0" />
+            <enum name="gone" value="1" />
+        </attr>
+        <!--arrow颜色-->
+        <attr name="headSpinnerArrowColor" format="color" />
 
     </declare-styleable>
-    <declare-styleable name="HeadSpinner" >
 
-    </declare-styleable>
 </resources>
