--- a/views/src/main/res/values/dimens.xml
+++ b/views/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="spinner_item_padding">12dp</dimen>
+    <dimen name="spinner_item_default_text_size">15sp</dimen>
 </resources>
