--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_title">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -22,4 +22,9 @@
         android:name="com.head.views.ui.spinner.SpinnerFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_spinner" />
+    <fragment
+        android:id="@+id/navigation_title"
+        android:name="com.head.views.ui.title.TitleFragment"
+        android:label="fragment_title"
+        tools:layout="@layout/fragment_title" />
 </navigation>
