内容：增加HeadTitle 进度：正在进行 作者：舒文

--- a/views/src/main/res/values/dimens.xml
+++ b/views/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="spinner_item_padding">12dp</dimen>
     <dimen name="spinner_item_default_text_size">15sp</dimen>
+    <dimen name="head_left_textview_size">15sp</dimen>
+    <dimen name="head_right_textview_size">15sp</dimen>
 </resources>
