--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.head.view.HeadTitleBar
         android:id="@+id/headTitleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:headTitleBarCustomView="@layout/item_title"
-        app:layout_constraintEnd_toEndOf="parent"
         android:elevation="18dp"
-        app:headTitleBarSupportGradient="true"
+        app:headTitleBarCustomView="@layout/item_title"
         app:headTitleBarGradientFrom="#2BB3F1"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="5dp"
         app:headTitleBarGradientTo="#008EFF"
+        app:headTitleBarSupportGradient="true"
+        app:headTitleGeneralLeftIcon="@drawable/ic_baseline_arrow_back_ios_24"
+        app:headTitleGeneralLeftText="返回"
+        app:headTitleGeneralLeftTextColor="#000000"
+        app:headTitleGeneralLeftTextSize="18dp"
+        app:headTitleGeneralRightIcon="@drawable/ic_baseline_search_24"
+        app:headTitleGeneralRightText="查询"
+        app:headTitleGeneralRightTextColor="#000000"
+        app:headTitleGeneralRightTextSize="18dp"
+        app:headTitleStyle="general"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_weight="1"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
