--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -202,6 +202,29 @@
         <attr name="headTitleBarGradientFrom" format="color" />
         <!--渐变结束色-->
         <attr name="headTitleBarGradientTo" format="color" />
+        <!--标题栏主题-->
+        <attr name="headTitleStyle">
+            <enum name="general" value="0" />
+            <enum name="search" value="1" />
+            <enum name="custom" value="2" />
+        </attr>
+        <!--通用标题模版左侧文本-->
+        <attr name="headTitleGeneralLeftText" format="string"/>
+        <!--通用标题模版左侧图标-->
+        <attr name="headTitleGeneralLeftIcon" format="reference"/>
+        <!--通用标题模版左侧文字大小-->
+        <attr name="headTitleGeneralLeftTextSize" format="dimension"/>
+        <!--通用标题模版左侧文字颜色-->
+        <attr name="headTitleGeneralLeftTextColor" format="color"/>
+
+        <!--通用标题模版右侧文本-->
+        <attr name="headTitleGeneralRightText" format="string"/>
+        <!--通用标题模版右侧图标-->
+        <attr name="headTitleGeneralRightIcon" format="reference"/>
+        <!--通用标题模版右侧文字大小-->
+        <attr name="headTitleGeneralRightTextSize" format="dimension"/>
+        <!--通用标题模版右侧文字颜色-->
+        <attr name="headTitleGeneralRightTextColor" format="color"/>
     </declare-styleable>
 
 </resources>
