内容：通用模板发现小bug 进度：正在进行 作者：舒文

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="18dp"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="8dp"
         app:headTitleBarCustomView="@layout/item_title"
         app:headTitleBarGradientFrom="#2BB3F1"
-        android:paddingVertical="8dp"
-        android:paddingHorizontal="5dp"
         app:headTitleBarGradientTo="#008EFF"
         app:headTitleBarSupportGradient="true"
+        app:headTitleGeneralCenterMainMarquee="true"
+        app:headTitleGeneralCenterMainText="主标题主标题主标题主标题主标题主标题"
+        app:headTitleGeneralCenterMainTextColor="#FF5722"
+        app:headTitleGeneralCenterMainTextSize="18dp"
+        app:headTitleGeneralCenterSubMarquee="true"
+        app:headTitleGeneralCenterSubText="次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题"
+        app:headTitleGeneralCenterSubTextColor="#020202"
         app:headTitleGeneralLeftIcon="@drawable/ic_baseline_arrow_back_ios_24"
         app:headTitleGeneralLeftText="返回"
         app:headTitleGeneralLeftTextColor="#000000"
