内容：增加HeadTitle 增加沉浸式 进度：正在进行 作者：舒文

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,26 +10,27 @@
         android:id="@+id/headTitleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="18dp"
+        android:elevation="8dp"
         android:paddingHorizontal="5dp"
         android:paddingVertical="8dp"
+        app:elevation="0dp"
+        app:headTitleBarBackgroundColor="#FFFFFF"
         app:headTitleBarCustomView="@layout/item_title"
         app:headTitleBarGradientFrom="#2BB3F1"
         app:headTitleBarGradientTo="#008EFF"
         app:headTitleBarSupportGradient="true"
         app:headTitleGeneralCenterMainMarquee="true"
-        app:headTitleGeneralCenterMainText="主标题主标题主标题主标题主标题主标题"
+        app:headTitleGeneralCenterMainText="主标题"
         app:headTitleGeneralCenterMainTextColor="#FF5722"
         app:headTitleGeneralCenterMainTextSize="18dp"
         app:headTitleGeneralCenterSubMarquee="true"
-        app:headTitleGeneralCenterSubText="次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题次标题"
+        app:headTitleGeneralCenterSubText="次标题"
         app:headTitleGeneralCenterSubTextColor="#020202"
-        app:headTitleGeneralLeftIcon="@drawable/ic_baseline_arrow_back_ios_24"
+        app:headTitleGeneralLeftIcon="@drawable/ic_baseline_chevron_left_24"
         app:headTitleGeneralLeftText="返回"
-        app:headTitleGeneralLeftTextColor="#000000"
+        app:headTitleGeneralLeftTextColor="#FFFFFF"
         app:headTitleGeneralLeftTextSize="18dp"
         app:headTitleGeneralRightIcon="@drawable/ic_baseline_search_24"
-        app:headTitleGeneralRightText="查询"
         app:headTitleGeneralRightTextColor="#000000"
         app:headTitleGeneralRightTextSize="18dp"
         app:headTitleStyle="general"
