内容：HeadTitle已经初步完成 进度：正在进行 作者：舒文

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,20 @@
         android:layout_height="wrap_content"
         android:elevation="8dp"
         android:paddingHorizontal="5dp"
-        android:paddingVertical="8dp"
-        app:elevation="0dp"
+        android:paddingVertical="5dp"
+        app:elevation="10dp"
         app:headTitleBarBackgroundColor="#FFFFFF"
         app:headTitleBarCustomView="@layout/item_title"
+        app:headTitleBarFill="true"
+        app:headTitleBarTransparent="true"
         app:headTitleBarGradientFrom="#2BB3F1"
         app:headTitleBarGradientTo="#008EFF"
         app:headTitleBarSupportGradient="true"
+        app:headTitleBarTheme="light"
         app:headTitleGeneralCenterMainMarquee="true"
         app:headTitleGeneralCenterMainText="主标题"
         app:headTitleGeneralCenterMainTextColor="#FF5722"
         app:headTitleGeneralCenterMainTextSize="18dp"
-        app:headTitleGeneralCenterSubMarquee="true"
         app:headTitleGeneralCenterSubText="次标题"
         app:headTitleGeneralCenterSubTextColor="#020202"
         app:headTitleGeneralLeftIcon="@drawable/ic_baseline_chevron_left_24"
