--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -202,7 +202,22 @@
         <attr name="headTitleBarGradientFrom" format="color" />
         <!--渐变结束色-->
         <attr name="headTitleBarGradientTo" format="color" />
-        <!--标题栏主题-->
+
+        <!--是否开启透明状态栏 默认关闭-->
+        <attr name="headTitleBarTransparent" format="boolean" />
+        <!--是否填充状态栏 默认不填充-->
+        <attr name="headTitleBarFill" format="boolean" />
+        <!--状态栏的填充色如果有参数则填充，如果没有则默认和标题栏同色-->
+        <attr name="headTitleBarFillColor" format="color" />
+        <!--填充透明度-->
+        <attr name="headTitleBarFillColorAlpha" format="integer" />
+        <!--状态栏主题-->
+        <attr name="headTitleBarTheme" >
+            <enum name="light" value="0" />
+            <enum name="dark" value="1" />
+        </attr>
+
+        <!--标题栏风格-->
         <attr name="headTitleStyle">
             <enum name="general" value="0" />
             <enum name="search" value="1" />
@@ -234,6 +249,7 @@
         <attr name="headTitleGeneralCenterMainTextColor" format="color"/>
         <!--通用标题模版中间主标题是否开启跑马灯效果-->
         <attr name="headTitleGeneralCenterMainMarquee" format="boolean"/>
+
         <!--通用标题模版中间次标题文本-->
         <attr name="headTitleGeneralCenterSubText" format="string"/>
         <!--通用标题模版中间次标题文字大小-->
