--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,24 +18,19 @@
         app:headTitleBarCustomView="@layout/item_title"
         app:headTitleBarFill="true"
         app:headTitleBarTransparent="true"
-        app:headTitleBarGradientFrom="#2BB3F1"
-        app:headTitleBarGradientTo="#008EFF"
+        app:headTitleBarGradientFrom="#3C3C3C"
+        app:headTitleBarGradientTo="#3C3C3C"
         app:headTitleBarSupportGradient="true"
         app:headTitleBarTheme="light"
         app:headTitleGeneralCenterMainMarquee="true"
-        app:headTitleGeneralCenterMainText="主标题"
         app:headTitleGeneralCenterMainTextColor="#FF5722"
         app:headTitleGeneralCenterMainTextSize="18dp"
-        app:headTitleGeneralCenterSubText="次标题"
         app:headTitleGeneralCenterSubTextColor="#020202"
-        app:headTitleGeneralLeftIcon="@drawable/ic_baseline_chevron_left_24"
-        app:headTitleGeneralLeftText="返回"
         app:headTitleGeneralLeftTextColor="#FFFFFF"
         app:headTitleGeneralLeftTextSize="18dp"
-        app:headTitleGeneralRightIcon="@drawable/ic_baseline_search_24"
         app:headTitleGeneralRightTextColor="#000000"
         app:headTitleGeneralRightTextSize="18dp"
-        app:headTitleStyle="general"
+        app:headTitleStyle="search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
