--- a/views/src/main/res/values/dimens.xml
+++ b/views/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="head_left_textview_size">15sp</dimen>
     <dimen name="head_right_textview_size">15sp</dimen>
     <dimen name="head_center_main_textview_size">15sp</dimen>
+    <dimen name="head_center_main_search_size">15sp</dimen>
     <dimen name="head_center_sub_textview_size">13sp</dimen>
+    <dimen name="head_center_search_radio">14dp</dimen>
 </resources>
