HeadTitleBar修改一下像素的获取方式

--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -27,10 +27,11 @@
             android:id="@+id/headTitleBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:headTitleBarBackgroundColor="#18191b"
-            app:headTitleStyle="custom"
-            app:headTitleBarCustomView="@layout/title_bilibili"
+            android:elevation="10dp"
             android:padding="12dp"
+            app:headTitleBarBackgroundColor="#18191b"
+            app:headTitleBarCustomView="@layout/title_bilibili"
+            app:headTitleStyle="custom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +41,8 @@
             android:id="@+id/head_title_02"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="12dp"
+            android:elevation="10dp"
             android:padding="15dp"
             app:headTitleBarBackgroundColor="#191919"
             app:headTitleBarCustomView="@layout/title_wx"
