--- a/views/src/main/res/values/dimens.xml
+++ b/views/src/main/res/values/dimens.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="spinner_item_padding">12dp</dimen>
-    <dimen name="spinner_item_default_text_size">15sp</dimen>
-    <dimen name="head_left_textview_size">15sp</dimen>
-    <dimen name="head_right_textview_size">15sp</dimen>
-    <dimen name="head_center_main_textview_size">15sp</dimen>
-    <dimen name="head_center_main_search_size">15sp</dimen>
+    <dimen name="head_center_search_padding_vertical">3dp</dimen>
+    <dimen name="head_center_search_padding_horizontal">8dp</dimen>
     <dimen name="head_center_sub_textview_size">13sp</dimen>
     <dimen name="head_center_search_radio">14dp</dimen>
-    <dimen name="head_center_search_padding_horizontal">8dp</dimen>
-    <dimen name="head_center_search_padding_vertical">3dp</dimen>
+    <dimen name="head_view_default_size">15sp</dimen>
+
+    <dimen name="spinner_item_padding">12dp</dimen>
 </resources>
