--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,13 +37,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <com.head.view.HeadBottomNavigation
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
-
-
-        <CheckBox
-            android:layout_width="wrap_content"
+            android:id="@+id/headBottom"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"/>
+
+
         <fragment
             android:id="@+id/nav_host_fragment_activity_main"
             android:name="androidx.navigation.fragment.NavHostFragment"
