--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -305,4 +305,8 @@
 
     </declare-styleable>
 
+    <declare-styleable name="HeadBottomNavigation">
+        <!--点击涟漪的效果-->
+        <attr name="HeadBottomNavigationClickRipples" format="boolean"/>
+    </declare-styleable>
 </resources>
